bin_PROGRAMS = winmbf
winmbf_SOURCES = am_map.c d_deh.c d_items.c d_main.c d_net.c doomdef.c doomstat.c dstrings.c f_finale.c f_wipe.c g_game.c hu_lib.c hu_stuff.c i_main.c i_net.c info.c i_sound.c i_stretch.c i_system.c i_video.c m_argv.c m_bbox.c m_cheat.c m_menu.c m_misc.c mmus2mid.c m_random.c p_ceilng.c p_doors.c p_enemy.c p_floor.c p_genlin.c p_inter.c p_lights.c p_map.c p_maputl.c p_mobj.c p_plats.c p_pspr.c p_saveg.c p_setup.c p_sight.c p_spec.c p_switch.c p_telept.c p_tick.c p_user.c r_bsp.c r_data.c r_draw.c r_main.c r_plane.c r_segs.c r_sky.c r_things.c sounds.c s_sound.c st_lib.c st_stuff.c tables.c version.c v_video.c wi_stuff.c w_wad.c z_zone.c
winmbf_CFLAGS = @SDL_CFLAGS@ @SDL_mixer_CFLAGS@ @SDL_net_CFLAGS@
winmbf_LDADD = @SDL_LIBS@ @SDL_mixer_LIBS@ @SDL_net_LIBS@
