set(BASE_SOURCES
    all-all/actors/possess.txt
    all-all/actors/doomimp.txt
    all-all/colormaps/watermap.cmp
    all-all/graphics/cross00.png
    all-all/graphics/cross01.png
    all-all/graphics/cross02.png
    all-all/graphics/cross03.png
    all-all/graphics/cross04.png
    all-all/graphics/cross05.png
    all-all/graphics/cross06.png
    all-all/graphics/cross07.png
    all-all/graphics/cross08.png
    all-all/graphics/dig033.png
    all-all/graphics/dig037.png
    all-all/graphics/dig043.png
    all-all/graphics/dig045.png
    all-all/graphics/dig046.png
    all-all/graphics/dig047.png
    all-all/graphics/dig048.png
    all-all/graphics/dig049.png
    all-all/graphics/dig050.png
    all-all/graphics/dig051.png
    all-all/graphics/dig052.png
    all-all/graphics/dig053.png
    all-all/graphics/dig054.png
    all-all/graphics/dig055.png
    all-all/graphics/dig056.png
    all-all/graphics/dig057.png
    all-all/graphics/dig058.png
    all-all/graphics/dig065.png
    all-all/graphics/dig066.png
    all-all/graphics/dig067.png
    all-all/graphics/dig068.png
    all-all/graphics/dig069.png
    all-all/graphics/dig070.png
    all-all/graphics/dig071.png
    all-all/graphics/dig072.png
    all-all/graphics/dig073.png
    all-all/graphics/dig074.png
    all-all/graphics/dig075.png
    all-all/graphics/dig076.png
    all-all/graphics/dig077.png
    all-all/graphics/dig078.png
    all-all/graphics/dig079.png
    all-all/graphics/dig080.png
    all-all/graphics/dig081.png
    all-all/graphics/dig082.png
    all-all/graphics/dig083.png
    all-all/graphics/dig084.png
    all-all/graphics/dig085.png
    all-all/graphics/dig086.png
    all-all/graphics/dig087.png
    all-all/graphics/dig088.png
    all-all/graphics/dig089.png
    all-all/graphics/dig090.png
    all-all/graphics/dig091.png
    all-all/graphics/dig093.png

    all-all/graphics/smbfgg0.png
    all-all/graphics/smbfgg1.png
    all-all/graphics/smcsaw0.png
    all-all/graphics/smcsaw1.png
    all-all/graphics/smfist0.png
    all-all/graphics/smfist1.png
    all-all/graphics/smlaun0.png
    all-all/graphics/smlaun1.png
    all-all/graphics/smmgun0.png
    all-all/graphics/smmgun1.png
    all-all/graphics/smpisg0.png
    all-all/graphics/smpisg1.png
    all-all/graphics/smplas0.png
    all-all/graphics/smplas1.png
    all-all/graphics/smsgn20.png
    all-all/graphics/smsgn21.png
    all-all/graphics/smshot0.png
    all-all/graphics/smshot1.png
    all-all/graphics/smunkn0.png
    all-all/graphics/smunkn1.png

    all-all/graphics/stbr123.png
    all-all/graphics/stbr124.png
    all-all/graphics/stbr125.png
    all-all/graphics/stbr126.png
    all-all/graphics/stbr127.png
    all-all/graphics/stkeys6.png
    all-all/graphics/stkeys7.png
    all-all/graphics/stkeys8.png

    all-all/graphics/m_butt1.png
    all-all/graphics/m_butt2.png
    all-all/graphics/m_vbox.png

    all-all/sounds/dsdgact.wav
    all-all/sounds/dsdgatk.wav
    all-all/sounds/dsdgdth.wav
    all-all/sounds/dsdgpain.wav
    all-all/sounds/dsdgsit.wav

    all-all/sprites/dogsa1.png
    all-all/sprites/dogsa2.png
    all-all/sprites/dogsa3.png
    all-all/sprites/dogsa4.png
    all-all/sprites/dogsa5.png
    all-all/sprites/dogsa6.png
    all-all/sprites/dogsa7.png
    all-all/sprites/dogsa8.png
    all-all/sprites/dogsb1.png
    all-all/sprites/dogsb2.png
    all-all/sprites/dogsb3.png
    all-all/sprites/dogsb4.png
    all-all/sprites/dogsb5.png
    all-all/sprites/dogsb6.png
    all-all/sprites/dogsb7.png
    all-all/sprites/dogsb8.png
    all-all/sprites/dogsc1.png
    all-all/sprites/dogsc2.png
    all-all/sprites/dogsc3.png
    all-all/sprites/dogsc4.png
    all-all/sprites/dogsc5.png
    all-all/sprites/dogsc6.png
    all-all/sprites/dogsc7.png
    all-all/sprites/dogsc8.png
    all-all/sprites/dogsd1.png
    all-all/sprites/dogsd2.png
    all-all/sprites/dogsd3.png
    all-all/sprites/dogsd4.png
    all-all/sprites/dogsd5.png
    all-all/sprites/dogsd6.png
    all-all/sprites/dogsd7.png
    all-all/sprites/dogsd8.png
    all-all/sprites/dogse1.png
    all-all/sprites/dogse2.png
    all-all/sprites/dogse3.png
    all-all/sprites/dogse4.png
    all-all/sprites/dogse5.png
    all-all/sprites/dogse6.png
    all-all/sprites/dogse7.png
    all-all/sprites/dogse8.png
    all-all/sprites/dogsf1.png
    all-all/sprites/dogsf2.png
    all-all/sprites/dogsf3.png
    all-all/sprites/dogsf4.png
    all-all/sprites/dogsf5.png
    all-all/sprites/dogsf6.png
    all-all/sprites/dogsf7.png
    all-all/sprites/dogsf8.png
    all-all/sprites/dogsg1.png
    all-all/sprites/dogsg2.png
    all-all/sprites/dogsg3.png
    all-all/sprites/dogsg4.png
    all-all/sprites/dogsg5.png
    all-all/sprites/dogsg6.png
    all-all/sprites/dogsg7.png
    all-all/sprites/dogsg8.png
    all-all/sprites/dogsh1.png
    all-all/sprites/dogsh2.png
    all-all/sprites/dogsh3.png
    all-all/sprites/dogsh4.png
    all-all/sprites/dogsh5.png
    all-all/sprites/dogsh6.png
    all-all/sprites/dogsh7.png
    all-all/sprites/dogsh8.png
    all-all/sprites/dogsi0.png
    all-all/sprites/dogsj0.png
    all-all/sprites/dogsk0.png
    all-all/sprites/dogsl0.png
    all-all/sprites/dogsm0.png
    all-all/sprites/dogsn0.png
    all-all/sprites/pls1a0.png
    all-all/sprites/pls1b0.png
    all-all/sprites/pls1c0.png
    all-all/sprites/pls1d0.png
    all-all/sprites/pls1e0.png
    all-all/sprites/pls1f0.png
    all-all/sprites/pls1g0.png
    all-all/sprites/pls2a0.png
    all-all/sprites/pls2b0.png
    all-all/sprites/pls2c0.png
    all-all/sprites/pls2d0.png
    all-all/sprites/pls2e0.png
    all-all/sprites/tnt1a0.png

    all-all/animated.lmp
    all-all/amapdef.json
    all-all/chexdeh.lmp
    all-all/compdb.json
    all-all/crblack.lmp
    all-all/crblue.lmp
    all-all/crblue2.lmp
    all-all/crbrick.lmp
    all-all/crbrown.lmp
    all-all/crgold.lmp
    all-all/crgray.lmp
    all-all/crgreen.lmp
    all-all/crorange.lmp
    all-all/crpurple.lmp
    all-all/crred.lmp
    all-all/crtan.lmp
    all-all/crwhite.lmp
    all-all/cryellow.lmp
    all-all/declare.txt
    all-all/dmxopl.op2
    all-all/sbardef.json
    all-all/sbhuddef.json
    all-all/skytran.lmp
    all-all/switches.lmp

    betalevl.wad/umapinfo.lmp

    chex.wad/brghtmps.lmp
    chex.wad/umapinfo.lmp

    chex2.wad/brghtmps.lmp
    chex2.wad/dehacked.lmp

    chex-all/brghtmps.lmp

    doom-all/brghtmps.lmp

    e1m4b.wad/dehacked.lmp
    e1m8b.wad/dehacked.lmp

    hacx.wad/brghtmps.lmp
    hacx.wad/dehacked.deh

    id1.wad/dehacked.lmp

    rekkr-all/dehacked.lmp

    tnt.wad/brghtmps.lmp)

add_custom_command(OUTPUT "${BASE_PK3_PATH}"
    COMMAND ${CMAKE_COMMAND} -E tar cf "${BASE_PK3_PATH}" --format=zip ${BASE_SOURCES}
    DEPENDS ${BASE_SOURCES}
    WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")

add_custom_target(woof-base DEPENDS "${BASE_PK3_PATH}")

if(WIN32)
    install(FILES "${BASE_PK3_PATH}" DESTINATION .)
else()
    install(FILES "${BASE_PK3_PATH}" DESTINATION "share/${PROJECT_SHORTNAME}")
endif()
